overflow-x problem with iOS10 fixed

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -6,14 +6,7 @@
 @import 'section4.scss';
 @import 'footer.scss';
 
-html{
-  overflow-x: hidden!important;
-  padding:0;
-  margin:0;
-}
-body{
-  overflow-x: hidden;
-  width: 100%;
-  padding:0;
-  margin:0;
+html,body
+{
+    overflow-x: hidden!important;
 }
